--- a/src/main/resources/report-header.html
+++ b/src/main/resources/report-header.html
@@ -1,8 +1,8 @@
-<html>
+<html lang="en">
     <head>
         <title>Deprecated API Usage in Plugins</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-        <style type="text/css">
+        <style>
 * {
     margin: 0;
     padding: 0;
