--- a/Output_example.html
+++ b/Output_example.html
@@ -1,4 +1,4 @@
-<html><head><title>Usage of deprecated Jenkins api in plugins</title><style>body { font-family: Arial, Helvetica, sans-serif; font-size: 12px; }</style></head><body><h2> Finds and reports usage of deprecated Jenkins api in plugins </h2> (except api used in jelly and groovy files and in WEB-INF/lib/*.jar)<br/>
+<html lang="en"><head><title>Usage of deprecated Jenkins api in plugins</title><style>body { font-family: Arial, Helvetica, sans-serif; font-size: 12px; }</style></head><body><h2> Finds and reports usage of deprecated Jenkins api in plugins </h2> (except api used in jelly and groovy files and in WEB-INF/lib/*.jar)<br/>
 Downloaded update-center.json<br/>
 Downloaded tinfoil-scan.hpi, 1335 Kb<br/>
 All files are up to date (1114 plugins)<br/>
